2024-09-30  Tomoaki NISHIYAMA <tomoaki@sci.u-toyama.ac.jp>
        * Simplify tests

2024-09-24  Tomoaki NISHIYAMA <tomoaki@sci.u-toyama.ac.jp>
        * Update DESCRIPTION

2024-09-22  Tomoaki NISHIYAMA  <tomoaki@sci.u-toyama.ac.jp>
        * Update DESCRIPTION

2024-08-26  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
        * Replace Calloc and Free with R_Calloc and R_Free, respectively.

2024-01-11  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
        * Supply (void) for a testprogram in configure.ac for warning by clang

2024-01-10  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
        * Fix partial match warning #132
        * Suppress warnings on win-devel

2023-12-15  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
        * %s format string for an integer in an error message was corrected
        * exclude dropped column from column listing (reported by warnes #130)

2023-01-12  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
	* replace sprintf with snprintf
	* replace strcpy with strncpy

2021-07-26  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
	* Change LICENCE to GPL-3
	* import new config.guess and config.sub
	* Drop an unused variable RS_PostgreSQL_closeManager_t
	* Use seq_along() instead of seq(along=)
	* -Wno-stringop-truncation for libpq compilation on windows
	* Change Description for new version and license.
	* fix type as pointed out by PR #109
	* http to https transition for URLs

2017-06-19  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
	* new libpq from postgresql-9.6.3 and Makefiles generated on Sierra (macOS 10.12)

2014-02-08  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Update tests docs for CRAN submission.
	A bug in postgresqlNewConnection() was identified and fixed during the
	test rewrite.

	* inst/ANNOUNCEMENT
	* inst/NEWS
	* man/dbConnect-methods.Rd: explanation of the parameters.
	* R/PostgreSQLSupport.R: newConnection do not emit error on NULL